# Fashion-NeRF

./: .gitignore  FashionNeRF.py  FashionNeRF.yml  README.md  dataset.py  evaluate.py  metrics.py  requirements.txt  run_preprocess_slurm.sh  run_slurm.sh  run_slurm.sh.save  setup.cfg  setup.py  test.py  train.py  utils.py
FashionNeRF.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
VITON/Parser_Based/CP_VTON/: cp_dataset.py  evaluate.py  networks.py  test.py  train.py  utils.py
VITON/Parser_Based/CP_VTON_plus/: cp_dataset.py  evaluate.py  networks.py  test.py  train.py  utils.py
VITON/Parser_Based/HR_VITON/: evaluate.py  get_norm_const.py  get_parse_agnostic.py  networks.py  test_condition.py  test_generator.py  train_condition.py  train_generator.py  utils.py
debug/cpvton/: cpvton.sh  cpvton_gmm.sh  cpvton_tom.sh
debug/cpvtonplus/: cpvtonplus_gmm.sh  cpvtonplus_tom.sh
debug/dm_vton/: pb_dmvton_e2e.sh  pb_dmvton_warp.sh  pf_dmvton_e2e.sh  pf_dmvton_warp.sh
debug/fs_vton/: pb_fsvton_e2e.sh  pb_fsvton_warp.sh  pf_fsvton_e2e.sh  pf_fsvton_warp.sh
debug/hrviton/: gen_hrviton.sh  tocg_hrviton.sh
debug/pf_afn/: pb_pfafn_e2e.sh  pb_pfafn_warp.sh  pf_pfafn_e2e.sh  pf_pfafn_warp.sh
debug/sd_viton/: gen_sd_viton.sh  tocg_sd_viton.sh
scripts/: cihp_pgn.sh  run_openpose.sh
scripts/viton/: viton.sh
sweeps/: acgpn.yml  cp_vton.yml  cp_vton_plus.yml  dm_vton.yml  fs_vton.yml  hr_viton.yml  ladi_viton.yml  sd_viton.yml
yaml/: acgpn.yml  cp_vton.yml  cp_vton_plus.yml  dm_vton.yml  fs_vton.yml  hr_viton.yml  ladi_viton.yml  pf_afn.yml  sd_viton.yml
(+139 files in other folders)
