[metadata]
name = fashion-nerf
version = 0.1.0
author = Your Name
description = A description of your project

[options.packages.find]
where = .
include =
    VITON.*
exclude =
    preprocessing
    scripts
    runs
    slurms
    wandb
    results
    tensorboard
    experiments
    NeRF
    logs
    checkpoints
